fixed layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -229,6 +229,20 @@ body {
   }
 }
 
+.link-holder .original-link {
+  overflow-wrap: anywhere;
+}
+
+@media (min-width: 768px) {
+  .link-holder {
+    gap: 1rem;
+  }
+
+  .link-holder .original-link {
+    width: 60%;
+  }
+}
+
 @media (max-width: 767px) {
   .link-holder {
     font-size: 1rem !important;
@@ -239,7 +253,7 @@ body {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .link-holder .copy-btn {
     width: 7rem;
   }
